--- a/src/record.css
+++ b/src/record.css
@@ -1,6 +1,14 @@
+.record {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 2em;
+  margin-bottom: 1em;
+}
+
 .dot {
-  height: 25px;
-  width: 25px;
+  height: 1.5em;
+  width: 1.5em;
   background-color: red;
   border-radius: 50%;
   display: inline-block;
