--- a/src/home.css
+++ b/src/home.css
@@ -1,3 +1,6 @@
+/* Ruslan Sendecky <ruslan.sendecky@nab.com.au> */
+/************************************************/
+
 #home {
   margin: 0;
   padding: 0;
