--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,6 @@
+/* Ruslan Sendecky <ruslan.sendecky@nab.com.au> */
+/************************************************/
+
 * {
   margin: 0;
   padding: 0;
