--- a/src/record.css
+++ b/src/record.css
@@ -1,3 +1,6 @@
+/* Ruslan Sendecky <ruslan.sendecky@nab.com.au> */
+/************************************************/
+
 .record {
   display: flex;
   justify-content: space-between;
