--- a/src/home.css
+++ b/src/home.css
@@ -11,7 +11,7 @@
 }
 
 header {
-  border-bottom: 1px solid white;
+  border-bottom: 0.2em solid white;
   height: 10%;
   padding-left: 2em;
   padding-right: 2em;
