--- a/src/record.css
+++ b/src/record.css
@@ -6,6 +6,16 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1em;
+  padding-right: 1em;
+  padding-left: 1em;
+  cursor: pointer;
+  border: 1px solid transparent;
+  transition: border-color 0.5s ease;
+}
+
+.record:hover {
+  border-right: 1px solid white;
+  border-left: 1px solid white;
 }
 
 .dot {
